# itmo-ml-labs

./: .gitignore  README.md  lab1_Здор.docx  lab2_Здор.docx  lab3_Здор.docx  lab4_Здор.docx  lab5_Здор.docx  lab6_Здор.docx  pyproject.toml
lab1/: lab1.ipynb
lab2/: lab2.ipynb
lab3/: lab3.ipynb
lab4/: lab4.ipynb
lab5/: lab5.ipynb
lab6/: lab6.ipynb
